vlib/v/checker/tests/if_match_result.vv
// missing results
_ = match 4 {
	1 {}
	else {}
}
_ = if true {
} else {
}

// void results
_ = match 4 {
	1 { println('') }
	else { exit(0) }
}
_ = if true {
	println('')
} else {
	exit(0)
}
